--- a/web/viewer.css
+++ b/web/viewer.css
@@ -397,18 +397,22 @@ canvas {
 }
 
 #loadingBar {
+  background-color: #333;
   display: inline-block;
   border: 1px solid black;
   clear: both;
   margin:0px;
   line-height: 0;
   border-radius: 4px;
+  width: 15em;
+  height: 1.5em;
 }
 
 #loadingBar .progress {
   background-color: green;
   display: inline-block;
-  
+  float: left;
+
   background: #b4e391;
   background: -moz-linear-gradient(top, #b4e391 0%, #61c419 50%, #b4e391 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b4e391), color-stop(50%,#61c419), color-stop(100%,#b4e391));
@@ -419,13 +423,9 @@ canvas {
 
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
-}
 
-#loadingBar .remaining {
-  background-color: #333;
-  display: inline-block;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
+  width: 0%;
+  height: 100%;
 }
 
 #PDFBug {
