--- a/web/viewer.css
+++ b/web/viewer.css
@@ -31,12 +31,17 @@ body {
   background-color: hsla(0,0%,0%,.1);
   box-shadow: inset -1px 0 0 hsla(0,0%,0%,.25);
   overflow: auto;
+  padding-top: 33px;
+}
+#sidebarContainer.hidden {
+  display:none;
 }
 
 #viewerContainer {
   -moz-box-flex: 1;
   height: 100%;
   box-shadow: inset 1px 0 0 hsla(0,0%,100%,.05);
+  padding-top: 30px;
 }
 
 .toolbar {
@@ -64,6 +69,9 @@ body {
               inset 0 -1px 0 hsla(0,0%,100%,.05),
               0 1px 0 hsla(0,0%,0%,.15),
               0 1px 1px hsla(0,0%,0%,.1);
+}
+#toolbarSidebar.hidden {
+  display:none;
 }
 
 #toolbarViewer {
@@ -237,7 +245,7 @@ body {
   min-width: 30px;
 }
 
-.toolbarButton.sidebarToggle::before {
+.toolbarButton#sidebarToggle::before {
   display: inline-block;
   content: url(images/toolbarButton-sidebarToggle.png);
 }
@@ -337,65 +345,26 @@ body {
   cursor: default;
 }
 
-.viewer {
-  width: 100%;
-  height: 100%;
-  margin-top: -27px;
-  -moz-user-select:none;
-  cursor: default;
-}
-
-.viewerImage {
-/*         width: 50%; */
-  margin: 80px 20px 20px;
-  box-shadow: 0 0 0 1px hsla(0,0%,0%,.5),
-              0 2px 8px hsla(0,0%,0%,.3);
-
-}
-
-
 #thumbnailView {
   position: fixed;
   width: 120px;
   height: 100%;
-  padding: 51px 40px 0;
+  padding: 10px 40px 0;
   overflow: auto;
 }
 
 .thumbnail {
-  position: relative;
-  float: left;
-  width: 120px;
-  height: 150px;
-
-/*
-  width: 98px;
-  height: 128px;
-  margin: 0 10px 20px;
-  background-color: white;
-  background-image: url(images/thumbnail.png);
-  border: 1px solid transparent;
-  box-shadow: 0 0 0 1px hsla(0,0%,0%,.5),
-              0 2px 8px hsla(0,0%,0%,.3);
-  opacity: .8;
-  -moz-transition-duration: 150ms;
-*/
+  width: 134px;
+  height: 134px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left:auto;
+  margin-right:auto;
+  line-height: 134px;
+  text-align: center;
+  overflow: hidden;
 }
 
-.thumbnailImage {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 98px;
-  height: 128px;
-/*  background-image: url(images/thumbnail.png);*/
-  border: 1px solid transparent;
-  box-shadow: 0 0 0 1px hsla(0,0%,0%,.5),
-              0 2px 8px hsla(0,0%,0%,.3);
-  opacity: .8;
-  z-index: 99;
-  -moz-transition-duration: 150ms;
-}
 .thumbnailSelectionRing {
   position: absolute;
   width: 112px;
@@ -440,6 +409,9 @@ body {
   height: 100%;
   padding: 52px 4px 0;
   overflow: auto;
+}
+#outlineView.hidden {
+  display:none;
 }
 
 .outlineEntry {
