--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1,8 +1,6 @@
 * {
   padding: 0;
   margin: 0;
-  -moz-user-select:none;
-  cursor: default;
 }
 
 html {
@@ -21,8 +19,6 @@ body {
   -moz-box-orient: horizontal;
   width: 100%;
   height: 100%;
-  -moz-user-select:none;
-  cursor: default;
 }
 
 #sidebarContainer {
@@ -284,12 +280,12 @@ body {
   content: url(images/toolbarButton-bookmark.png);
 }
     
-.toolbarButton.viewThumbnail::before {
+#viewThumbnail.toolbarButton::before {
   display: inline-block;
   content: url(images/toolbarButton-viewThumbnail.png);
 }
     
-.toolbarButton.viewOutline::before {
+#viewOutline.toolbarButton::before {
   display: inline-block;
   content: url(images/toolbarButton-viewOutline.png);
 }
@@ -351,6 +347,9 @@ body {
   bottom: 0;
   padding: 10px 40px 0;
   overflow: auto;
+}
+#thumbnailView.hidden {
+  display:none;
 }
 
 .thumbnail {
@@ -477,3 +476,91 @@ canvas {
   -moz-box-shadow: 0px 2px 10px #ff0;
   -webkit-box-shadow: 0px 2px 10px #ff0;
 }
+
+#loadingBox {
+  margin: 100px 0;
+  text-align: center;
+}
+
+#loadingBar {
+  background-color: #333;
+  display: inline-block;
+  border: 1px solid black;
+  clear: both;
+  margin:0px;
+  line-height: 0;
+  border-radius: 4px;
+  width: 15em;
+  height: 1.5em;
+}
+
+#loadingBar .progress {
+  background-color: green;
+  display: inline-block;
+  float: left;
+
+  background: #b4e391;
+  background: -moz-linear-gradient(top, #b4e391 0%, #61c419 50%, #b4e391 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b4e391), color-stop(50%,#61c419), color-stop(100%,#b4e391));
+  background: -webkit-linear-gradient(top, #b4e391 0%,#61c419 50%,#b4e391 100%);
+  background: -o-linear-gradient(top, #b4e391 0%,#61c419 50%,#b4e391 100%);
+  background: -ms-linear-gradient(top, #b4e391 0%,#61c419 50%,#b4e391 100%);
+  background: linear-gradient(top, #b4e391 0%,#61c419 50%,#b4e391 100%);    
+
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+
+  width: 0%;
+  height: 100%;
+}
+
+.textLayer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  color: #000;
+  font-family: sans-serif;
+}
+
+.textLayer > div {
+  color: transparent;
+  position: absolute;
+  line-height:1.3;
+}
+
+.annotComment > div {
+  position: absolute;
+}
+
+.annotComment > img {
+  position: absolute;
+}
+
+.annotComment > img:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.annotComment > div {
+  padding: 0.2em;
+  max-width: 20em;
+  background-color: #F1E47B;
+  box-shadow: 0px 2px 10px #333;
+  -moz-box-shadow: 0px 2px 10px #333;
+  -webkit-box-shadow: 0px 2px 10px #333;
+}
+
+.annotComment > div > h1 {
+  font-weight: normal;
+  font-size: 1.2em;
+  border-bottom: 1px solid #000000;
+  margin: 0px;
+}
+
+/* TODO: file FF bug to support ::-moz-selection:window-inactive
+   so we can override the opaque grey background when the window is inactive;
+   see https://bugzilla.mozilla.org/show_bug.cgi?id=706209 */
+::selection { background:rgba(0,0,255,0.3); }
+::-moz-selection { background:rgba(0,0,255,0.3); }
