removed all old elements; file input & dl work

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -282,6 +282,10 @@ body {
   content: url(images/toolbarButton-download.png);
 }
 
+.toolbarButton.bookmark {
+  display: block;
+}
+
 .toolbarButton.bookmark::before {
   display: inline-block;
   content: url(images/toolbarButton-bookmark.png);
