--- a/web/viewer.css
+++ b/web/viewer.css
@@ -304,8 +304,8 @@ body {
 }
 
 .dropdownToolbarButton {
-  min-width: 100px;
-  max-width: 100px;
+  min-width: 120px;
+  max-width: 120px;
   overflow: hidden;
   background: url(images/toolbarButton-menuArrows.png) no-repeat 95%;
 }
@@ -313,13 +313,21 @@ body {
 .dropdownToolbarButton > select {
   -moz-appearance: none; /* in the future this might matter, see bugzilla bug #649849 */
   -webkit-appearance: none;
-  min-width: 120px;
+  min-width: 140px;
   font-size: 12px;
   color: hsl(0,0%,95%);
   margin:0;
   padding:0;
   border:none;
   background: transparent;
+}
+
+#customScaleOption {
+  display: none;
+}
+
+#pageWidthOption {
+  border-bottom: 1px rgba(255, 255, 255, .5) solid;
 }
 
 .splitToolbarButton:first-child,
